--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,7 +6,8 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
         <link rel="stylesheet" type="text/css" media="screen" href="@{'/public/stylesheets/main.css'}">
         <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
-        <!--<script src="@{'/public/javascripts/jquery-1.6.4.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>-->
+        <script src="@{'/public/javascripts/jquery-1.6.4.min.js'}"></script>
+		<script src="@{'/public/javascripts/jquery.tools.min.js'}"></script>
     </head>
     <body>
 		<div id="header">
