--- a/app/views/Application/show.html
+++ b/app/views/Application/show.html
@@ -29,16 +29,23 @@
 #{form @Application.postComment(post.id)}
 
 #{ifErrors}
-	<p class="error">All fields are required!</p>
+	<p class="error">${errors[0]}</p>
 #{/ifErrors}
 
 <p>
 	<label for="author">Your name: </label>
-	<input type="text" name="author" id="author" />
+	<input type="text" name="author" id="author" #{if author} value="${author}"#{/if}/>
 </p>
 <p>
 	<label for="content">Your message: </label>
-	<textarea name="content" id="content"></textarea>
+	<textarea name="content" id="content">#{if content}${content}#{/if}</textarea>
+</p>
+<!--CAPTCHA-->
+<p>
+	<label for="code">Please type the code below (case sensitive): </label>
+	<img src="@{Application.captcha(randomID)}" />
+	<input type="text" name="code" id="code" size="18" value="" />
+	<input type="hidden" name="randomID" value="${randomID}" />
 </p>
 <p>
 	<input type="submit" value="Submit your comment" />
